new component for output terminal (read-only ace editor); writing  text from input editor to console.log on change event

--- a/Jspace/src/app/app.component.html
+++ b/Jspace/src/app/app.component.html
@@ -1,2 +1,7 @@
 <h1>{{title}}</h1>
-<ace-component></ace-component>
+<div class="wrapper">
+  <h2>{{titleInput}}</h2>
+  <ace-input-component></ace-input-component>
+  <h2>{{titleOutput}}</h2>
+  <ace-output-component></ace-output-component>
+</div>
