implemented search stream for the editor text, test server returns atm all coded values which contain the string in the stream.-bugs: string has to be normalized before passed into the stream(lowercase, whitespace),search string contains just 1st line from editor, editor crashessometimes when typing functions. TODO: instead of returning the value of coded, returning feedback for the user.For that the DB has to hold events for the tasksand for specific states in that task. So we can implement a matching feedback for certain code

--- a/Jspace/src/app/ace.component.html
+++ b/Jspace/src/app/ace.component.html
@@ -1,4 +1,11 @@
 <ace-editor id="ace"#editor
        [(text)]="text"
+       (textChanged)="onChange($event)"
        [options]="options"
 ></ace-editor>
+  <div>
+    <div *ngFor="let code of codes | async">
+      {{code.coded}}
+    </div>
+  </div>
+
