--- a/Jspace/src/app/app.component.html
+++ b/Jspace/src/app/app.component.html
@@ -2,7 +2,7 @@
 <div class="wrapper">
   <h2>{{titleInput}}</h2>
   <ace-input-component></ace-input-component>
-  <button (click)="send()">{{buttonName}}</button>
+  <button id="btnRun" (click)="run()">{{buttonName}}</button>
   <h2>{{titleOutput}}</h2>
   <ace-output-component></ace-output-component>
 </div>
