--- a/Jspace/src/app/ace.component.html
+++ b/Jspace/src/app/ace.component.html
@@ -4,8 +4,10 @@
        [options]="options"
 ></ace-editor>
   <div>
-    <div *ngFor="let code of codes | async">
-      {{code.coded}}
+    <div *ngFor="let code of codes | async;let i = index" >
+      <div *ngIf="i==0">
+        {{code.response}}
+      </div>
     </div>
   </div>
 
