--- a/Jspace/src/app/ace.component.html
+++ b/Jspace/src/app/ace.component.html
@@ -3,6 +3,7 @@
        (textChanged)="onChange($event)"
        [options]="options"
 ></ace-editor>
+<div>TASK1: Declare a varaiable with name x and value 1.</div>
   <div>
     <div *ngFor="let code of codes | async;let i = index" >
       <div *ngIf="i==0">
