--- a/Jspace/src/app/app.component.html
+++ b/Jspace/src/app/app.component.html
@@ -3,6 +3,8 @@
   <h2>{{titleInput}}</h2>
   <ace-input-component></ace-input-component>
   <button id="btnRun" (click)="run()">{{buttonName}}</button>
-  <h2>{{titleOutput}}</h2>
+  <h2>{{titleOutputEvalFunction}}</h2>
+  <ace-output-component></ace-output-component>
+  <h2>{{titleOutputWebWorker}}</h2>
   <ace-output-component></ace-output-component>
 </div>
