--- a/Jspace/src/app/app.component.css
+++ b/Jspace/src/app/app.component.css
@@ -1,10 +1,27 @@
-.wrapper {
-  width: 80%;
+/*.app-wrapper {*/
+  /*background-color: sandybrown;*/
+  /*display: flex;*/
+  /*flex-direction: column;*/
+  /*height: 100vh;*/
+/*}*/
+
+.main {
+  width: 60%;
   margin: auto;
 }
 
 #btnRun {
-  width: 50px;
-  height: 25px;
-  background-color: rgb(255, 140, 0);
+  width: 70px;
+  height: 30px;
+  background-color: aquamarine;
 }
+
+#btnNext {
+  width: 70px;
+  height: 30px;
+  background-color: aquamarine;
+  float: right;
+}
+
+
+
