--- a/Jspace/src/app/app.component.html
+++ b/Jspace/src/app/app.component.html
@@ -1,8 +1,14 @@
-<h1>{{title}}</h1>
-<div class="wrapper">
-  <h2>{{titleInput}}</h2>
-  <ace-input-component></ace-input-component>
-  <button id="btnRun" (click)="setTextFromInputToOutput()">{{buttonName}}</button>
-  <h2>{{titleOutput}}</h2>
-  <ace-output-component></ace-output-component>
+<div class="app-wrapper">
+  <header>
+    <h1>{{title}}</h1>
+  </header>
+  <div class="main">
+    <h2>{{titleOutput}}</h2>
+    <ace-output-component></ace-output-component>
+    <h2>{{titleInput}}</h2>
+    <ace-input-component></ace-input-component>
+    <button id="btnRun" (click)="game.validateCode()">{{btnRun}}</button>
+    <button id="btnNext" (click)="game.goToNextTask()" [disabled]="game.btnNextDisabled">{{btnNext}}</button>
+  </div>
+
 </div>
