implemented token test service, this branch is for testing the service only here we implement no game structure

--- a/Jspace/src/app/app.component.html
+++ b/Jspace/src/app/app.component.html
@@ -7,4 +7,5 @@
   <button id="btnOne" (click)="runTaskOne()">{{buttonNameOne}}</button>
   <button id="btnTwo" (click)="runTaskTwo()">{{buttonNameTwo}}</button>
   <button id="btnThree" (click)="runTaskThree()">{{buttonNameThree}}</button>
+  <button id="btnShowJson" (click)="displayTokenizedCode()">{{buttonShowJson}}</button>
 </div>
