implemented task 3(text), fixed the isse where task answer was wrong, formatted all files

--- a/Jspace/src/app/ace-output/ace-output.component.html
+++ b/Jspace/src/app/ace-output/ace-output.component.html
@@ -1,4 +1,1 @@
-<ace-editor id="ace-output" #outputEditor
-            [(text)]="text"
-            [options]="options"
-></ace-editor>
+<ace-editor id="ace-output" #outputEditor [(text)]="text" [options]="options"></ace-editor>
