--- a/Jspace/src/app/ace-input/ace-input.component.html
+++ b/Jspace/src/app/ace-input/ace-input.component.html
@@ -1,5 +1,1 @@
-<ace-editor id="ace-input" #inputEditor
-            [(text)]="text"
-            [options]="options"
-></ace-editor>
-
+<ace-editor id="ace-input" #inputEditor [(text)]="text" [options]="options"></ace-editor>
