--- a/Jspace/src/app/app.component.css
+++ b/Jspace/src/app/app.component.css
@@ -1,9 +1,9 @@
-/*.app-wrapper {*/
-  /*background-color: sandybrown;*/
-  /*display: flex;*/
-  /*flex-direction: column;*/
-  /*height: 100vh;*/
-/*}*/
+.app-wrapper {
+  background-color: sandybrown;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
 
 .main {
   width: 60%;
@@ -22,6 +22,3 @@
   background-color: aquamarine;
   float: right;
 }
-
-
-
