--- a/Jspace/src/app/app.component.html
+++ b/Jspace/src/app/app.component.html
@@ -4,12 +4,7 @@
   </header>
   <main>
     <section id="sectionForMentor">
-      <div id="mentorInstructions">
-        <p>Here I am going to help you to repair you spaceship.</p>
-      </div>
-      <div id="mentor">
-        <img src="./assets/img/alien.png"/>
-      </div>
+      <mentor-component></mentor-component>
     </section>
     <section id="sectionForTerminals">
       <h2>{{titleOutput}}</h2>
