texts devided between mentor and output

--- a/Jspace/src/app/mentor/mentor.component.html
+++ b/Jspace/src/app/mentor/mentor.component.html
@@ -1,5 +1,5 @@
-<div id="mentorInstructions">
-  <p>Here I am going to help you to repair your spaceship.</p>
+<div id="mentorText">
+  <p>{{mentorText}}</p>
 </div>
 <div id="mentor">
   <img src="./assets/img/alien.png"/>
