--- a/Jspace/src/app/app.component.css
+++ b/Jspace/src/app/app.component.css
@@ -1,5 +1,5 @@
 html  {
-  background: url(https://i.imgur.com/glXZZOa.png) no-repeat center center fixed;
+  background: url(https://i.imgur.com/ziXPRHf.png) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -13,6 +13,7 @@ h2 {
   text-align: center;
 }
 
+
 .app-wrapper {
   display: flex;
   flex-direction: column;
@@ -20,9 +21,10 @@ h2 {
 }
 
 .main {
-  width: 60%;
+  width: 40%;
   margin: auto;
 }
+
 
 /*
 #btnRun {
