--- a/Jspace/src/styles.css
+++ b/Jspace/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+html  {
+  background: url(https://i.imgur.com/ziXPRHf.png) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+
