--- a/Jspace/src/app/app.component.css
+++ b/Jspace/src/app/app.component.css
@@ -6,13 +6,11 @@ h2 {
 }
 
 .app-wrapper {
-  display: flex;
-  flex-direction: column;
-  height: 100vh;
+  width: 90%;
+  margin: auto;
 }
 
 .main {
-  width: 40%;
   margin: auto;
   display: flex;
 }
