--- a/Jspace/src/app/app.component.css
+++ b/Jspace/src/app/app.component.css
@@ -1,8 +1,14 @@
+h2 {
+  font-family: "Tahoma";
+  font-weight: bold;
+  color: #ffffff;
+  text-align: center;
+}
 
 .app-wrapper {
-  /*height: 100vh;*/
+  margin-top: 100px;
+  margin-left: 5%;
   width: 90%;
-  margin: auto;
 }
 
 main {
@@ -12,22 +18,127 @@ main {
 
 #sectionForMentor {
   align-self: flex-end;
-  margin-right: 20px;
+  margin-right: 5%;
   width: 45%;
 }
 
 #sectionForTerminals {
   width: 55%;
 }
-#btnRun {
-  width: 70px;
-  height: 30px;
-  background-color: aquamarine;
-}
 
 #btnNext {
-  width: 70px;
-  height: 30px;
-  background-color: aquamarine;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  border-radius: 0px;
+  font-family: "Nixie One";
+  color: #ffffff;
+  font-size: 16px;
+  padding: 10px 20px 10px 20px;
+  border: solid #432E64 1px;
+  text-decoration: none;
   float: right;
+  background: #432E64;
+}
+
+#btnNext:hover {
+  background: #8b81d2;
+  text-decoration: none;
+}
+
+.button {
+  height: 80px;
+  width: 180px;
+  cursor: pointer;
+  margin: 50px auto;
+  font-family: "Nixie One";
+}
+
+.button .outer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+  background: rgba(0,0,0,0.65);
+  border-radius: 14px;
+  -webkit-border-radius: 14px;
+  -moz-border-radius: 14px;
+  box-shadow: inset rgba(0,0,0,0.85) 0px 1px 5px;
+  -webkit-box-shadow: inset rgba(0,0,0,0.85) 0px 1px 5px;
+  -moz-box-shadow: inset rgba(0,0,0,0.85) 0px 1px 5px;
+  -webkit-transform: perspective(500px) rotateX(35deg);
+  -moz-transform: perspective(500px) rotateX(35deg);
+}
+
+.button .outer .height {
+  position: relative;
+  height: 100%;
+  margin-top: -15px;
+  padding-bottom: 15px;
+  background: #51387A;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  box-shadow: rgba(0,0,0,0.85) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 8px;
+  -webkit-box-shadow: rgba(0,0,0,0.85) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 8px;
+  -moz-box-shadow: rgba(0,0,0,0.85) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 8px;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+}
+
+.button:hover .outer .height {
+  margin-top: -10px;
+  padding-bottom: 10px;
+  background: #51387A;
+  box-shadow: rgba(0,0,0,0.25) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 6px;
+  -webkit-box-shadow: rgba(0,0,0,0.25) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 6px;
+  -moz-box-shadow: rgba( 0,0,0,0.25) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 6px;
+}
+
+.button:active .outer .height {
+  margin-top: 0px;
+  padding-bottom: 0px;
+}
+
+.button .outer .height .inner {
+  line-height: 2.8em;
+  font-size: 30px;
+  letter-spacing: .05em;
+  position: relative;
+  height: 100%;
+  text-align: center;
+  text-shadow: #B4A7D6 0px 0px 1px;
+  background: #432E64;
+  background: -moz-linear-gradient(top, #B4A7D6 0%, #432E64 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#B4A7D6), color-stop(100%,#432E64)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #B4A7D6 0%,#432E64 100%); /* Chrome10+,Safari5.1+ */
+  border-radius: 12px;
+  -webkit-border-radius: 12px;
+  -moz-border-radius: 12px;
+  box-shadow: inset rgba(255,255,255,0.85) 0px 0px 1px;
+  -webkit-box-shadow: inset rgba(255,255,255,0.85) 0px 0px 1px;
+  -moz-box-shadow: inset rgba(255,255,255,0.85) 0px 0px 1px;
+  -webkit-transition: all 0.1s ease-in-out;
+  -moz-transition: all 0.1s ease-in-out;
+}
+
+.button:hover .outer .height .inner{
+  text-shadow: #B4A7D6 0px 0px 1px;
+  background: #432E64; /* Old browsers */
+  background: -moz-linear-gradient(top, #432E64 0%, #8b81d2 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#432E64), color-stop(100%,#8b81d2)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #432E64 0%,#8b81d2 100%); /* Chrome10+,Safari5.1+ */
+}
+
+.button:active .outer .height .inner{
+  text-shadow: #51387A 0px 1px 0px;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  box-shadow: inset rgba(0,0,0,0.9) 0px 0px 8px;
+  -webkit-box-shadow: inset rgba(0,0,0,0.9) 0px 0px 8px;
+  -moz-box-shadow: inset rgba(0,0,0,0.9) 0px 0px 8px;
+  background: #51387A; /* Old browsers */
+  background: -moz-linear-gradient(top, #432E64 0%, #8B81D2 100%); /* FF3.6+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#432E64), color-stop(100%,#8B81D2)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #432E64 0%,#8B81D2 100%); /* Chrome10+,Safari5.1+ */
 }
