--- a/Jspace/src/app/app.component.html
+++ b/Jspace/src/app/app.component.html
@@ -1,7 +1,5 @@
 <div class="app-wrapper">
-  <header class="wrapper">
     <h1>{{title}}</h1>
-  </header>
   <main>
     <section id="sectionForMentor">
       <mentor-component></mentor-component>
@@ -11,7 +9,7 @@
       <ace-output-component></ace-output-component>
       <h2>{{titleInput}}</h2>
       <ace-input-component></ace-input-component>
-      <button id="btnRun" (click)="game.validateCode()">{{btnRun}}</button>
+      <div class="button"><div class="outer"><div class="height"><div class="inner" (click)="game.validateCode()">{{btnRun}}</div></div></div></div>
       <button id="btnNext" (click)="game.goToNextTask()" [disabled]="game.btnNextDisabled">{{btnNext}}</button>
     </section>
   </main>
