--- a/Jspace/src/app/mentor/mentor.component.css
+++ b/Jspace/src/app/mentor/mentor.component.css
@@ -1,7 +1,7 @@
 #mentorText {
   background-color: #9DD8F7;
-  border-radius: 15px;
-  padding: 5px 20px;
+  border-radius: 0.938em;
+  padding: 0.313em 1.250em;
   font-family: "Raleway Light";
 }
 
