text in mentor window is shown with line breaks

--- a/Jspace/src/app/mentor/mentor.component.html
+++ b/Jspace/src/app/mentor/mentor.component.html
@@ -1,5 +1,5 @@
 <div id="mentorText">
-  <p>{{mentorText}}</p>
+  <p [innerHTML]="mentorText"></p>
 </div>
 <div id="mentor">
   <img src={{imgPath}}/>
