--- a/Jspace/src/app/app.buttons.css
+++ b/Jspace/src/app/app.buttons.css
@@ -25,10 +25,10 @@ RUN BUTTON CSS
  */
 
 .button {
-  height: 5.000em;
-  width: 11.250em;
+  height: 9vh;
+  width: 13vw;
   cursor: pointer;
-  margin: 3.125em auto;
+  margin: 4vh auto;
   font-family: "Nixie One";
 }
 
@@ -80,7 +80,7 @@ RUN BUTTON CSS
 
 .button .outer .height .inner {
   line-height: 2.8em;
-  font-size: 1.875em;
+  font-size: 3.4vh;
   letter-spacing: .05em;
   position: relative;
   height: 100%;
