--- a/Jspace/src/app/mentor/mentor.component.css
+++ b/Jspace/src/app/mentor/mentor.component.css
@@ -3,8 +3,10 @@
   border-radius: 0.938em;
   padding: 0.313em 1.250em;
   font-family: "Raleway Light";
+  max-height: 50vh;
+  overflow: overlay;
 }
 
 #mentor img {
-  height: 25rem;
+  height: 40vh;
 }
