eather run or next button is visible

--- a/Jspace/src/app/app.component.html
+++ b/Jspace/src/app/app.component.html
@@ -9,8 +9,9 @@
       <ace-output-component></ace-output-component>
       <h2>{{titleInput}}</h2>
       <ace-input-component></ace-input-component>
-      <div [hidden]='game.btnRunHidden' class="button"><div class="outer"><div class="height"><div class="inner" (click)="game.validateCode()">{{btnRun}}</div></div></div></div>
-      <button [hidden]='game.btnNextHidden' id="btnNext" (click)="game.goToNextTask()" [disabled]="game.btnNextDisabled">{{btnNext}}</button>
+      <div [hidden]='game.btnRunHidden' id="run" class="button"><div class="outer"><div class="height"><div class="inner" (click)="game.validateCode()">{{btnRun}}</div></div></div></div>
+      <div [hidden]='game.btnNextHidden' id="next" class="button"><div class="outer"><div class="height"><div class="inner" (click)="game.goToNextTask()">{{btnNext}}</div></div></div></div>
+      <!--<button [hidden]='game.btnNextHidden' id="btnNext" (click)="game.goToNextTask()" [disabled]="game.btnNextDisabled">{{btnNext}}</button>-->
     </section>
   </main>
 </div>
