--- a/Jspace/src/app/app.buttons.css
+++ b/Jspace/src/app/app.buttons.css
@@ -37,13 +37,13 @@ RUN BUTTON CSS
   width: 100%;
   height: 100%;
   padding: 0.625em;
-  background: rgba(0,0,0,0.65);
+  background: rgba(0, 0, 0, 0.65);
   border-radius: 0.875em;
   -webkit-border-radius: 0.875em;
   -moz-border-radius: 0.875em;
-  box-shadow: inset rgba(0,0,0,0.85) 0px 1px 5px;
-  -webkit-box-shadow: inset rgba(0,0,0,0.85) 0px 1px 5px;
-  -moz-box-shadow: inset rgba(0,0,0,0.85) 0px 1px 5px;
+  box-shadow: inset rgba(0, 0, 0, 0.85) 0px 1px 5px;
+  -webkit-box-shadow: inset rgba(0, 0, 0, 0.85) 0px 1px 5px;
+  -moz-box-shadow: inset rgba(0, 0, 0, 0.85) 0px 1px 5px;
   -webkit-transform: perspective(500px) rotateX(35deg);
   -moz-transform: perspective(500px) rotateX(35deg);
 }
@@ -57,9 +57,9 @@ RUN BUTTON CSS
   border-radius: 1.000em;
   -webkit-border-radius: 1.000em;
   -moz-border-radius: 1.000em;
-  box-shadow: rgba(0,0,0,0.85) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 8px;
-  -webkit-box-shadow: rgba(0,0,0,0.85) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 8px;
-  -moz-box-shadow: rgba(0,0,0,0.85) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 8px;
+  box-shadow: rgba(0, 0, 0, 0.85) 0px 1px 1px, inset rgba(0, 0, 0, 0.35) 0px -2px 8px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.85) 0px 1px 1px, inset rgba(0, 0, 0, 0.35) 0px -2px 8px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.85) 0px 1px 1px, inset rgba(0, 0, 0, 0.35) 0px -2px 8px;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
 }
@@ -68,9 +68,9 @@ RUN BUTTON CSS
   margin-top: -0.625em;
   padding-bottom: 0.625em;
   background: #51387A;
-  box-shadow: rgba(0,0,0,0.25) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 6px;
-  -webkit-box-shadow: rgba(0,0,0,0.25) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 6px;
-  -moz-box-shadow: rgba( 0,0,0,0.25) 0px 1px 1px, inset rgba(0,0,0,0.35) 0px -2px 6px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px, inset rgba(0, 0, 0, 0.35) 0px -2px 6px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px, inset rgba(0, 0, 0, 0.35) 0px -2px 6px;
+  -moz-box-shadow: rgba(0, 0, 0, 0.25) 0px 1px 1px, inset rgba(0, 0, 0, 0.35) 0px -2px 6px;
 }
 
 .button:active .outer .height {
@@ -88,36 +88,44 @@ RUN BUTTON CSS
   text-shadow: #B4A7D6 0px 0px 1px;
   background: #432E64;
   background: -moz-linear-gradient(top, #B4A7D6 0%, #432E64 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#B4A7D6), color-stop(100%,#432E64)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #B4A7D6 0%,#432E64 100%); /* Chrome10+,Safari5.1+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #B4A7D6), color-stop(100%, #432E64)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #B4A7D6 0%, #432E64 100%); /* Chrome10+,Safari5.1+ */
   border-radius: 0.750em;
   -webkit-border-radius: 0.750em;
   -moz-border-radius: 0.750em;
-  box-shadow: inset rgba(255,255,255,0.85) 0px 0px 1px;
-  -webkit-box-shadow: inset rgba(255,255,255,0.85) 0px 0px 1px;
-  -moz-box-shadow: inset rgba(255,255,255,0.85) 0px 0px 1px;
+  box-shadow: inset rgba(255, 255, 255, 0.85) 0px 0px 1px;
+  -webkit-box-shadow: inset rgba(255, 255, 255, 0.85) 0px 0px 1px;
+  -moz-box-shadow: inset rgba(255, 255, 255, 0.85) 0px 0px 1px;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
 }
 
-.button:hover .outer .height .inner{
+.button:hover .outer .height .inner {
   text-shadow: #B4A7D6 0px 0px 1px;
   background: #432E64; /* Old browsers */
   background: -moz-linear-gradient(top, #432E64 0%, #8b81d2 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#432E64), color-stop(100%,#8b81d2)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #432E64 0%,#8b81d2 100%); /* Chrome10+,Safari5.1+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #432E64), color-stop(100%, #8b81d2)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #432E64 0%, #8b81d2 100%); /* Chrome10+,Safari5.1+ */
 }
 
-.button:active .outer .height .inner{
+.button:active .outer .height .inner {
   text-shadow: #51387A 0px 1px 0px;
   border-radius: 1.000em;
   -webkit-border-radius: 1.000em;
   -moz-border-radius: 1.000em;
-  box-shadow: inset rgba(0,0,0,0.9) 0px 0px 8px;
-  -webkit-box-shadow: inset rgba(0,0,0,0.9) 0px 0px 8px;
-  -moz-box-shadow: inset rgba(0,0,0,0.9) 0px 0px 8px;
+  box-shadow: inset rgba(0, 0, 0, 0.9) 0px 0px 8px;
+  -webkit-box-shadow: inset rgba(0, 0, 0, 0.9) 0px 0px 8px;
+  -moz-box-shadow: inset rgba(0, 0, 0, 0.9) 0px 0px 8px;
   background: #51387A; /* Old browsers */
   background: -moz-linear-gradient(top, #432E64 0%, #8B81D2 100%); /* FF3.6+ */
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#432E64), color-stop(100%,#8B81D2)); /* Chrome,Safari4+ */
-  background: -webkit-linear-gradient(top, #432E64 0%,#8B81D2 100%); /* Chrome10+,Safari5.1+ */
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #432E64), color-stop(100%, #8B81D2)); /* Chrome,Safari4+ */
+  background: -webkit-linear-gradient(top, #432E64 0%, #8B81D2 100%); /* Chrome10+,Safari5.1+ */
+}
+
+#run {
+  color: black;
+}
+
+#next {
+  color: white;
 }
