--- a/Jspace/src/app/app.component.html
+++ b/Jspace/src/app/app.component.html
@@ -1,16 +1,29 @@
 <div class="app-wrapper">
-    <h1>{{title}}</h1>
+  <h1>{{title}}</h1>
+
   <main>
     <section id="sectionForMentor">
       <mentor-component></mentor-component>
     </section>
-    <section id="sectionForTerminals">
-      <h2>{{titleOutput}}</h2>
-      <ace-output-component></ace-output-component>
-      <h2>{{titleInput}}</h2>
-      <ace-input-component></ace-input-component>
-      <div [hidden]='game.btnRunHidden' id="run" class="button"><div class="outer"><div class="height"><div class="inner" (click)="game.validateCode()">{{btnRun}}</div></div></div></div>
-      <div [hidden]='game.btnNextHidden' id="next" class="button"><div class="outer"><div class="height"><div class="inner" (click)="game.goToNextTask()">{{btnNext}}</div></div></div></div>
+    <section id="sectionForComputer">
+      <section id="sectionForTerminals">
+        <ace-output-component></ace-output-component>
+        <div [hidden]='game.btnRunHidden' id="run" class="button">
+          <div class="outer">
+            <div class="height">
+              <div class="inner" (click)="game.validateCode()">{{btnRun}}</div>
+            </div>
+          </div>
+        </div>
+        <div [hidden]='game.btnNextHidden' id="next" class="button">
+          <div class="outer">
+            <div class="height">
+              <div class="inner" (click)="game.goToNextTask()">{{btnNext}}</div>
+            </div>
+          </div>
+        </div>
+        <ace-input-component></ace-input-component>
+      </section>
     </section>
   </main>
 </div>
