--- a/Jspace/src/app/app.buttons.css
+++ b/Jspace/src/app/app.buttons.css
@@ -25,11 +25,15 @@ RUN BUTTON CSS
  */
 
 .button {
-  height: 9vh;
-  width: 13vw;
+  position: absolute;
+  top: 3%;
+  left: 34.5%;
+  height: 8vh;
+  width: 37%;
+  margin: 0 auto;
   cursor: pointer;
-  margin: 4vh auto;
-  font-family: "Nixie One";
+  /*margin: 4vh auto;*/
+  font-family: "Nixie One", serif;
 }
 
 .button .outer {
