--- a/Jspace/src/app/app.component.css
+++ b/Jspace/src/app/app.component.css
@@ -11,28 +11,63 @@ h2 {
 }
 
 .app-wrapper {
-  margin: 5vh 8vw;
-  height: 90vh;
-  width: 84vw;
-  display: flex;
-  align-items: flex-end;
+  margin: 0 8vw;
+  /*height: 90vh;
+  width: 84vw;*/
 }
 
 main {
+  margin-top: 20vh;
   width: 100%;
   display: flex;
-  align-items: flex-end;
+  flex-direction: row;
 }
 
 #sectionForMentor {
   margin-right: 7%;
-  width: 45%;
+  flex-grow: 1;
+  flex-basis: 0;
 }
 
 #sectionForTerminals {
-  width: 48%;
+  position: relative;
+  height:80vh;
+
+  /*background-position: center;
+  background-size:cover;*/
+  flex-grow: 1;
+  flex-basis: 0;
 }
 
-#sectionForComputer {
+#sectionForTerminals #outputpart{
+  position: relative;
+  background-color: #FF6633;
+  border: 10px solid #FFFF66;
+  border-bottom: none;
+  height:30vh;
+}
 
+#sectionForTerminals #buttonpart{
+  position: relative;
+  background-color: #FF6633;
+  border: 10px solid #FFFF66;
+  border-bottom: none;
+  border-top: none;
+  height:15vh;
+  perspective: 600px;
+}
+
+#sectionForTerminals #inputpart{
+  position: relative;
+  background-color: #FF6633;
+  border: 10px solid #FFFF66;
+  border-top: none;
+  height:20vh;
+}
+
+#sectionForTerminals img {
+  width: 8%;
+  position: absolute;
+  top: 3%;
+  left: 8%;
 }
