--- a/Jspace/src/app/app.component.css
+++ b/Jspace/src/app/app.component.css
@@ -58,3 +58,10 @@ main {
   border-top: none;
   height:20vh;
 }
+
+#sectionForTerminals img {
+  width: 8%;
+  position: absolute;
+  top: 3%;
+  left: 8%;
+}
